GEOMESA-3600 Trino - clean up docs